RESOLVED FIXED118303
[Curl] Crash after download.
https://bugs.webkit.org/show_bug.cgi?id=118303
Summary [Curl] Crash after download.
peavo
Reported 2013-07-02 06:58:59 PDT
I sometimes get a crash in Curl after a download has finished. The reason is that the Curl easy handle for the download has been deleted before it has been removed from the Curl multi handle. We need to make sure that the easy handle is removed from the Curl multi handle before it's freed.
Attachments
Patch (3.98 KB, patch)
2013-07-02 07:08 PDT, peavo
no flags
peavo
Comment 1 2013-07-02 07:08:19 PDT
Brent Fulgham
Comment 2 2013-07-02 09:22:47 PDT
Comment on attachment 205909 [details] Patch r=me. A nice solution to this problem!
WebKit Commit Bot
Comment 3 2013-07-02 09:26:45 PDT
Comment on attachment 205909 [details] Patch Clearing flags on attachment: 205909 Committed r152297: <http://trac.webkit.org/changeset/152297>
WebKit Commit Bot
Comment 4 2013-07-02 09:26:47 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2013-07-02 11:20:17 PDT
(In reply to comment #2) > (From update of attachment 205909 [details]) > r=me. A nice solution to this problem! Thanks for the review ;)
Note You need to log in before you can comment on or make changes to this bug.